# slasshy-omnidownloader

./: .gitignore  README.md  appinfo (local-db).md  generate-icons.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  download-binaries.ps1  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  database.rs  downloader.rs  lib.rs  main.rs
src/components/: MediaInfoModal.tsx
src/components/3d/: GlowOrbs.tsx  ParticleField.tsx  PerspectiveGrid.tsx  index.ts
src/components/layout/: AnimatedSidebar.tsx  AppLayout.tsx  index.ts
src/components/pages/: DownloadsPage.tsx  HistoryPage.tsx  HomePage.tsx  SettingsPage.tsx  index.ts
src/hooks/: use3DTilt.ts
src/lib/: animations.ts
src/services/: api.ts
src/styles/: globals.css
