[package]
name = "slasshy-omnidownloader"
version = "0.1.0"
description = "Cross-platform media downloader, organizer, and converter"
authors = ["Suman Patgiri"]
edition = "2021"

[lib]
name = "slasshy_omnidownloader_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full", "sync"] }
thiserror = "1"
lazy_static = "1.5"
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
